--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="crea-playlist">
-                            <div class="inline">
+                            <div class="inline-row">
                                 <div class="mini-quadrato">
                                     <div class="plus-logo">
                                         <i class="fas fa-plus"></i>
@@ -56,7 +56,40 @@
                                 </div>
                                 <p>Crea playlist</p>
                             </div>
-                            
+                        </div>
+
+                        <div>
+                            <div class="lista-playlist">
+                                <ul>
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+
+                                    <li>
+                                        Nome Playlist
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
