--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@
     <main class="main-section">
         <section class="container">
             <div class="side-bar ">
-                <div class="main-logo">
-                    <img class="spotify-logo" src="./img/logo.svg" alt="logo-spotify">
+                <div>
+                    <div class="main-logo">
+                        <img class="spotify-logo" src="./img/logo.svg" alt="logo-spotify">
 
-                    <div class="side-home-cerca" >
-                        <div class="about-side">
-                            <img src="./img/home.svg" alt="home-logo">
-                            <p>Home</p>
-                        </div>
+                        <div class="side-home-cerca" >
+                            <div class="about-side">
+                                <img src="./img/home.svg" alt="home-logo">
+                                <p>Home</p>
+                            </div>
 
-                        <div class="about-side-1">
-                            <img  src="./img/search.svg" alt="search-logo">
-                            <p>Cerca</p>
-                        </div>
+                            <div class="about-side-1">
+                                <img  src="./img/search.svg" alt="search-logo">
+                                <p>Cerca</p>
+                            </div>
 
-                        <div class="about-side-1">
-                            <img  src="./img/libreria.svg" alt="libreria-logo">
-                            <p>La tua libreria</p>
+                            <div class="about-side-1">
+                                <img  src="./img/libreria.svg" alt="libreria-logo">
+                                <p>La tua libreria</p>
+                            </div>
                         </div>
                     </div>
+                    
 
                     <!-- CREA-PLAYLIST -->
                     <div class="lista-container">
@@ -58,6 +61,7 @@
                             </div>
                         </div>
 
+                        <!-- LISTA-NOME PLAYLIST -->
                         <div>
                             <div class="lista-playlist">
                                 <ul>
@@ -90,6 +94,26 @@
                                     </li>
                                 </ul>
                             </div>
+                        </div>
+
+                        <!-- FINE-SIDEBAR/INSTALLA-LOGO -->
+                        <div>
+                            <div class="prova">
+                                <div class="install-logo">
+                                    <i class="fas fa-arrow-down"></i>  
+                                </div>
+                                <p>install app</p>
+                            </div>
+
+                            <!-- BORDO-BOTTOM -->
+                            <div class="border-bottom"></div>
+                        </div>
+
+                        <div class="side-footer">
+                            <div class="immagine-profilo">
+                                <img src="./img/profile.svg" alt="profilo">                        
+                            </div>
+                            <p><strong>Jonh Doe</strong></p>
                         </div>
                     </div>
                 </div>
@@ -182,8 +206,10 @@
         </section>
     </main>
 
-    <!-- FOOTER -->
-    <footer class="main-footer">
+    <!-- FOOTER --> 
+
+
+    <!-- <footer class="main-footer">
         <div class="musica">
             <div class="musica-quad">
                <div>
@@ -204,6 +230,6 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
