--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
     <!-- FOOTER --> 
 
 
-    <!-- <footer class="main-footer">
+    <footer class="main-footer">
         <div class="musica">
             <div class="musica-quad">
-               <div>
-                   lorem
-               </div>
+               <!-- <div class="musica-ascolto">
+                   <img src="./img/sinister.jpeg" alt="sinister-img">
+               </div> -->
             </div>
 
             <div class="musica-quad">
@@ -291,6 +291,6 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
