--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         </div>
 
                         <!-- FINE-SIDEBAR/INSTALLA-LOGO -->
-                        <div>
-                            <div class="prova">
+                        <div >
+                            <div class="download">
                                 <div class="install-logo">
                                     <i class="fas fa-arrow-down"></i>  
                                 </div>
@@ -107,25 +107,27 @@
 
                             <!-- BORDO-BOTTOM -->
                             <div class="border-bottom"></div>
+
+                            <div class="side-footer">
+                                <div class="immagine-profilo">
+                                    <img src="./img/profile.svg" alt="profilo">                        
+                                </div>
+                                <p><strong>Jonh Doe</strong></p>
+                            </div>
                         </div>
 
-                        <div class="side-footer">
-                            <div class="immagine-profilo">
-                                <img src="./img/profile.svg" alt="profilo">                        
-                            </div>
-                            <p><strong>Jonh Doe</strong></p>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
 
-            <div class="main-brand">
-                <div class="barra-header">
-                    <div class="main-barra">
-                        <div class="bottone-1">
-                           <button class="upgrade-button">Effettua l'upgrade</button>
-                        </div>
+            <div class="main-content">
+                <div class="main-barra">
+                    <div class="bottone-1">
+                       <button class="upgrade-button">Effettua l'upgrade</button>
                     </div>
+                </div>
+                <div class="scrollable">
 
                     <!-- NAV-BAR -->
                     <div class="">
@@ -273,15 +275,31 @@
     <footer class="main-footer">
         <div class="musica">
             <div class="musica-quad">
-               <!-- <div class="musica-ascolto">
-                   <img src="./img/sinister.jpeg" alt="sinister-img">
-               </div> -->
+               <div class="musica-ascolto">
+                    <img src="./img/sinister.jpeg" alt="sinister-img">
+
+                   <div class="titolo-brano-footer">
+                        <h4><strong>Sinister</strong></h4>
+                        <p><strong>Brano nome</strong></p>
+                   </div>
+               
+                    <div class="icone-flex">
+                        <i class="far fa-heart"></i>
+                        <i class="far fa-folder"></i>
+                    </div>
+               </div>
             </div>
 
-            <div class="musica-quad">
-                <div>
-                    lorem
-                    Lorem ipsum dolor sit
+            <!-- MEDIA-PLAYER -->
+            <div class="musica-quad-1">
+                <div class="larghezza">
+                    <div class="media-player">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-step-forward"></i>
+                        <i class="fas fa-redo"></i>
+                    </div>
                 </div>
             </div>
 
