--- a/index.html
+++ b/index.html
@@ -292,20 +292,31 @@
 
             <!-- MEDIA-PLAYER -->
             <div class="musica-quad-1">
-                <div class="larghezza">
+                <div class="larghezza-media">
                     <div class="media-player">
-                        <i class="fas fa-random"></i>
-                        <i class="fas fa-step-backward"></i>
+                        <i class="fas fa-random icona"></i>
+                        <i class="fas fa-step-backward icona"></i>
                         <i class="far fa-play-circle"></i>
-                        <i class="fas fa-step-forward"></i>
-                        <i class="fas fa-redo"></i>
+                        <i class="fas fa-step-forward icona"></i>
+                        <i class="fas fa-redo icona"></i>
+                    </div>
+                </div>
+
+                <!-- LINEA-TEMPO -->
+                <div >
+                    <div class="linea-tempo">
+                        <p>0:25</p> <span class="border-tempo"></span> <p>4:35</p>
                     </div>
                 </div>
             </div>
 
+            <!-- FOOTER-DESTRA -->
             <div class="musica-quad">
-                <div>
-                    lorem
+                <div class="icone-destra-footer">
+                    <i class="fas fa-list"></i>
+                    <i class="fas fa-desktop"></i>
+                    <i class="fas fa-volume-up"></i>
+                    <span class="barra-volume"></span>
                 </div>
             </div>
         </div>
