--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
                             <div class="col">
                                 <div class="immagini">
                                     <img src="./img/metal_lifting.jpg" alt="metal-img">
+                                    <div class="layover"></div>
+                                    <i class="far fa-play-circle plus-icona"></i>
                                 </div>
                                 <h3><strong>Heavi Metal</strong></h3>
                                 <p><strong>Subtitle</strong></p>
@@ -158,6 +160,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/stranger.jpeg" alt="stranger-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</strong></h3>
                                     <p><strong>Kyle Dixon & Michael Stein</strong></p>
@@ -168,6 +172,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/aquietplace.jpeg" alt="aquiestplace-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>A quiet place</strong></h3>
                                     <p><strong>Subtitle</strong></p>
@@ -178,6 +184,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/split.jpeg" alt="split-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Split</strong></h3>
                                     <p><strong>Subtitle</strong></p>
@@ -188,6 +196,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/cure.jpeg" alt="cure-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>A cure for wellness</strong></h3>
                                     <p><strong>Subtitle</strong></p>
@@ -198,6 +208,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/sinister.jpeg" alt="sinister-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Sinister</strong></h3>
                                     <p><strong>Subtitle</strong></p>
@@ -219,6 +231,8 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/radar.jpeg" alt="radar-img">
+                                        <div class="layover"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Release Radar</strong></h3>
                                 </div>
@@ -227,6 +241,8 @@
                                     <div class="col">
                                         <div class="immagini">
                                             <img src="./img/mixdaily.jpeg" alt="mix-img">
+                                            <div class="layover"></div>
+                                            <i class="far fa-play-circle plus-icona"></i>
                                         </div>
                                         <h3><strong>Daily Mix 1</strong></h3>
                                     </div>
@@ -245,16 +261,22 @@
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/youg.jpeg" alt="Lana-del-rey-img">
+                                        <div class="layover-1"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Lana del Rey</strong></h3>
+                                </div>    
                             </div>
 
                             <div class="gallery-3">
                                 <div class="col">
                                     <div class="immagini">
                                         <img src="./img/einaudi.jpeg" alt="Ludovico-enaudi-img">
+                                        <div class="layover-1"></div>
+                                        <i class="far fa-play-circle plus-icona"></i>
                                     </div>
                                     <h3><strong>Ludovico Enaudi</strong></h3>
+                                </div>    
                             </div>
 
                            
