--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                         <div class="side-home-cerca" >
                             <div class="about-side">
                                 <img src="./img/home.svg" alt="home-logo">
-                                <p>Home</p>
+                                <p><strong>Home</strong></p>
                             </div>
 
                             <div class="about-side-1">
                                 <img  src="./img/search.svg" alt="search-logo">
-                                <p>Cerca</p>
+                                <p><strong>Cerca</strong></p>
                             </div>
 
                             <div class="about-side-1">
                                 <img  src="./img/libreria.svg" alt="libreria-logo">
-                                <p>La tua libreria</p>
+                                <p><strong>La tua libreria</strong></p>
                             </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                     <!-- CREA-PLAYLIST -->
                     <div class="lista-container">
                         <div class="">
-                            <h2>Playlist</h2>
+                            <h2><strong>Playlist</strong></h2>
                         </div>
 
                         <div class="crea-playlist">
@@ -57,7 +57,7 @@
                                         <i class="fas fa-plus"></i>
                                     </div>
                                 </div>
-                                <p>Crea playlist</p>
+                                <p><strong>Crea playlist</strong></p>
                             </div>
                         </div>
 
@@ -66,31 +66,31 @@
                             <div class="lista-playlist">
                                 <ul>
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
 
                                     <li>
-                                        Nome Playlist
+                                        <strong>Nome Playlist</strong>
                                     </li>
                                 </ul>
                             </div>
@@ -102,7 +102,7 @@
                                 <div class="install-logo">
                                     <i class="fas fa-arrow-down"></i>  
                                 </div>
-                                <p>install app</p>
+                                <p><strong>install app</strong></p>
                             </div>
 
                             <!-- BORDO-BOTTOM -->
@@ -124,7 +124,7 @@
             <div class="main-content">
                 <div class="main-barra">
                     <div class="bottone-1">
-                       <button class="upgrade-button">Effettua l'upgrade</button>
+                       <button class="upgrade-button"><strong>Effettua l'upgrade</strong></button>
                     </div>
                 </div>
                 <div class="scrollable">
@@ -133,12 +133,12 @@
                     <div class="">
                         <div class="nav-bar">
                           
-                            <a href="#">In evidenza <div class="border"></div></a>
-                            <a href="#">Podcast</a> 
-                            <a href="#">classifiche</a>
-                            <a href="#">Generi e mood</a>
-                            <a href="#">Nuove uscite</a>
-                            <a href="#">Scopri</a>
+                            <a href="#"><strong>In evidenza</strong> <div class="border"></div></a>
+                            <a href="#"><strong>Podcast</strong> </a> 
+                            <a href="#"><strong>classifiche</strong></a>
+                            <a href="#"><strong>Generi e mood</strong></a>
+                            <a href="#"><strong>Nuove uscite</strong></a>
+                            <a href="#"><strong>Scropri</strong></a>
                     
                         </div>
                     </div>
@@ -328,6 +328,8 @@
                 <div >
                     <div class="linea-tempo">
                         <p>0:25</p> <span class="border-tempo"></span> <p>4:35</p>
+                        <div class="border-tempo-1"></div>
+                        <div class="pallina-tempo"></div>
                     </div>
                 </div>
             </div>
@@ -339,6 +341,8 @@
                     <i class="fas fa-desktop"></i>
                     <i class="fas fa-volume-up"></i>
                     <span class="barra-volume"></span>
+                    <div class="linea-tempo2"></div>
+                    <div class="pallina-volume"></div>
                 </div>
             </div>
         </div>
