--- a/index.html
+++ b/index.html
@@ -328,8 +328,10 @@
                 <div >
                     <div class="linea-tempo">
                         <p>0:25</p> <span class="border-tempo"></span> <p>4:35</p>
+                        <div class="border-tempo-2"></div>
                         <div class="border-tempo-1"></div>
                         <div class="pallina-tempo"></div>
+                        
                     </div>
                 </div>
             </div>
@@ -340,8 +342,9 @@
                     <i class="fas fa-list"></i>
                     <i class="fas fa-desktop"></i>
                     <i class="fas fa-volume-up"></i>
-                    <span class="barra-volume"></span>
-                    <div class="linea-tempo2"></div>
+                    <div class="barra-volume"></div>
+                    <div class="linea-tempo-2"></div>
+                    <div class="linea-tempo-1"></div>
                     <div class="pallina-volume"></div>
                 </div>
             </div>
